# my-Inpaint360GS

./: .gitignore  LICENSE.txt  README.md  convert.py  edit_object_inpaint.py  edit_object_removal.py  edit_object_removal_plyfusion.py  install.sh  iterative_inpaint.py  iterative_inpaint.sh  metrics_after_inpaint.py  my_run_seg.sh  pipeline.sh  pipeline_wrapper.sh  pyproject.toml  render.py  run_inpaint.sh  run_remove.sh  siggraph_demo.sh
LaMa/: .gitignore  rename.py  requirements.txt
Segment-and-Track-Anything/: .gitignore  app.py  model_args.py  prepare.py  seg_track_anything.py
arguments/: __init__.py
docs/: install.md
ext/: grounded_sam.py
gaussian_renderer/: __init__.py
gaussian_splatting/: .gitignore  convert.py  environment.yml  metrics.py  render.py  render_video.py  requirements.txt  sparse2dense.py  train.py
scene/: __init__.py  cameras.py  colmap_loader.py  dataset_readers.py  gaussian_model.py
scripts/: download_inpaint360gs_dataset.sh  download_inpaint360gs_result.sh  run_data_prepare.sh
seg/: .gitignore  automatic_mask_generator.py  distillation.py  mask_associate.py  patch_fvcore.py  raw_mask_sam.py  seg_config.json
tools/: add_label_num_hqsam.py  auto_mask_provider_segtrack.py  combine_gaussian_scene.py  init_configs.py  metrics_fid_masked.py  prepare_lama_data.py  separate_train_test_ply.py  simple_lama_inpaint_virtual.py  virtual_pose.py  vis_obj_color.py
utils/: camera_utils.py  compose_utils.py  general_utils.py  graphics_utils.py  image_utils.py  inpaint_target_paths.py  iterative_workflow.py  loss_utils.py  point_utils.py  (+4 more)
(+53 files in other folders)
